# PgQue

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  RELEASE.md  SPRINT_HANDOFF.md
benchmark/: HARDWARE.md  METHODOLOGY.md  OPS_GOTCHAS.md  R10.md  README.md
benchmarks/: consumer_bench.sql  dead_tuple_check.sql  insert_bench.sql  run_benchmarks.sh
blueprints/: BENCH_FANOUT_CHURN.md  BENCH_XMIN_HORIZON.md  BETTER_DOCS.md  COOPERATIVE_CONSUMERS.md  DELAYED_ROTATION.md  DURABLE_EXECUTION_FEASIBILITY.md  IDEMPOTENCY_AND_PARTITIONS.md  PHASES.md  SPECx.md  pgq-concepts.md  pgq-history-and-concepts.md  pgq-history.md  podcast-talking-points.md
ci/: Dockerfile.pg_tle  Dockerfile.pgcron  Dockerfile.tle  wait-for-postgres.sh
clients/: README.md
clients/python/: README.md  RELEASE.md  bench_producer.py  pyproject.toml
clients/python/bench/: coop_scaling.csv  coop_scaling.py
clients/python/logres/: __init__.py  client.py  consumer.py  types.py
clients/python/pg_current/: __init__.py  client.py  consumer.py  types.py
clients/python/pgque/: __init__.py  _version.py  client.py  consumer.py  errors.py  types.py
clients/python/tests/: conftest.py  test_concurrency.py  test_connect.py  test_consumer.py  test_consumer_listen_stop.py  test_nack.py  test_null_event.py  test_producer.py  test_receive.py  test_send.py  test_smoke.py  test_transaction_visibility.py  test_version.py
docs/: README.md  architecture.md  benchmarks.md  comparison.md  concepts.md  examples.md  installation.md  monitoring.md  observability.md  partition-keys.md  roadmap.md  (+9 more)
(+369 files in other folders)
