[project]
name = "pg_current"
version = "0.1.0"
description = "Python client for pg_current -- PgQ Universal Edition"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
